--- a/public/attend.html
+++ b/public/attend.html
@@ -16,6 +16,9 @@
   </head>
   <body>
     <noscript></noscript>
-    <div id="root"></div>
+    <div id="root"></div>    
+      <div id="result">Le résultat sera affiché ici</div>
+    <script src="Affichage.js"></script>
   </body>
 </html>
+
